--- a/index.html
+++ b/index.html
@@ -10,47 +10,19 @@
   <body onload="initialize()">
     <div id="app"></div>
     <script src="bundle.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=places"></script>
-     <script>
-            var autocomplete;
-            function initialize() {
-            autocomplete = new google.maps.places.Autocomplete(
-            /** @type {!HTMLInputElement} */(document.getElementById('autocomplete')),
-            {types: ['geocode']});
+   <script src="https://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>
+<script>
+google.maps.event.addDomListener(window, 'load', initialize);
+function initialize() {
+	var input = document.getElementById('autocomplete');
+	var autocomplete = new google.maps.places.Autocomplete(input);
+	autocomplete.addListener('place_changed', function () {
+	var place = autocomplete.getPlace();
+	input.value = place.formatted_address;
+});
+}
+</script>
 
-        // When the user selects an address from the dropdown, populate the address
-        // fields in the form.
-        autocomplete.addListener('place_changed', fillInAddress);
-            }
-
-
-        
-
-
-      function fillInAddress() {
-        // Get the place details from the autocomplete object.
-        var place = autocomplete.getPlace();
-
-        for (var component in componentForm) {
-          document.getElementById(component).value = '';
-          document.getElementById(component).disabled = false;
-        }
-
-        // Get each component of the address from the place details
-        // and fill the corresponding field on the form.
-        for (var i = 0; i < place.address_components.length; i++) {
-          var addressType = place.address_components[i].types[0];
-          if (componentForm[addressType]) {
-            var val = place.address_components[i][componentForm[addressType]];
-            document.getElementById(addressType).value = val;
-          }
-        }
-      }
-
-
-
-        </script>
-  
     
   </body>
 </html>
